syntax = "proto3";
package ccmose;
option go_package = "/ccmose/service/auth/api;wechatpb";

message LoginRequest{
  string code = 1;
}

message LoginResponse{
  string token = 1;
  string login_flag = 2;
}

service LoginService{
  rpc GetUserInfo(LoginRequest) returns (LoginResponse){}
}